turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:9: error: overriding method left in class AbstractBuggle of type ()Unit;
 value left needs `override' modifier
val left = 2
    ^Turmite:11: error: overriding method right in class AbstractBuggle of type ()Unit;
 value right needs `override' modifier
val right = 8
    ^